Fixed some bugs in display, such as: - Pagepath was not visible - some items in banner, mainnav were a bit displaced - notices were not visible
git-svn-id: https://trac-hacks.org/svn@12568 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/navigationdisplayplugin/trunk/navigationplugin/htdocs/fixed_menu.css
+++ b/navigationdisplayplugin/trunk/navigationplugin/htdocs/fixed_menu.css
@@ -1,42 +1,40 @@
+@media screen{
+
 #banner {
-	background-color: #ffffff;
     position: fixed;
+	width: 99%;
+	background-color: #ffffff;
+	z-index: 99;
     top: 0;
 	left: 0;
-	z-index: 100;
-	margin: 0px;
-	padding: 0px;
-	padding-bottom: 5px;
+    padding: .5em .5em 5em .5em;
 	clear: both;
-	width: 100%;
 }
 
-/* 	margin: 0px;
-	padding: 0px; */
 #mainnav {
-    background-color: #ffffff;
     position:fixed;
-	left: 0;
-	z-index:100;
-	width: 100%;
-	text-align: right;
+	width: 99%;
+	z-index:102;
 	clear: both;
+}
+
+#pagepath, #ctxtnav {
+    position: fixed;
 }
 
 #ctxtnav {
-    background-color: #ffffff;
-    position: fixed;
-	left: 0;
+	width: 99%;
 	z-index:100;
-	margin: 0px;
-	padding: 0px;
-	padding-top: 5px;
-	margin-right: 0.5em;
-	width: 100%;
-	text-align: right;
-	clear: both;
+	left: 0;
+	padding: 2.5em .5em 0 .5em;
 }
 
-#pagepath, #warning, #content, #altlinks, #footer {
+#pagepath{
+	z-index:101;
+	padding: 3.5em 0.5em;
+}
+
+ #warning, #content, #altlinks, #footer, #notice {
 	position: relative;
+}
 }
